<resources>
    <string name="app_name">Layout</string>
    <string name="escolher">Escolher</string>
    <string name="exmplo_linearlayout">Linear Layout</string>
    <string name="exemplo_relativelayout">Relative Layout</string>
    <string name="exemplo_absolutelayout">Absolute Layout</string>
    <string name="exemplo_framelayout">Frame Layout</string>
    <string name="mensagem">Você já está vendo um Linear Layout</string>
    <string name="sou_um_texto_no_canto_superior_direito">Sou um texto no canto superior direito</string>
    <string name="sou_um_texto_no_fim_da_tela">Sou um texto no fim da tela</string>
    <string name="sou_um_texto_no_meio">Sou um texto no meio</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="estou_em_uma_posi_o_absoluta">Estou em uma posição absoluta</string>
    <string name="digite_seu_usuario">Digite seu usuário</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="login">Login</string>
</resources>
